# torquis

./: .gitignore  CMakeLists.txt  LICENSE  PREVERSION.txt  README.md  test_inter.cpp  test_join.cpp  test_split.cpp  testrunner.cpp  torquis.hpp
include/: torquis.hpp
include/torquis/: join.hpp  replace.hpp  split.hpp  tolower.hpp  toupper.hpp
test/: test_inter.cpp  test_join.cpp  test_replace.cpp  test_split.cpp  test_tolower.cpp  test_toupper.cpp  testrunner.cpp
